<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="01097734891" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/txtphone"
        app:layout_constraintTop_toBottomOf="@+id/txtphone"
        tools:text="hiiii" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="116dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_Wsh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="52dp"
        android:text="@string/W_sh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <Button
        android:id="@+id/btn_Rsh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/R_SH"
        app:layout_constraintStart_toEndOf="@+id/btn_Wsh"
        app:layout_constraintTop_toTopOf="@+id/btn_Wsh" />

    <Button
        android:id="@+id/btn_WIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/W_IS"
        app:layout_constraintStart_toStartOf="@+id/btn_Wsh"
        app:layout_constraintTop_toBottomOf="@+id/btn_Wsh" />

    <Button
        android:id="@+id/btn_RIE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/R_IS"
        app:layout_constraintStart_toEndOf="@+id/btn_WIS"
        app:layout_constraintTop_toTopOf="@+id/btn_WIS" />

    <Button
        android:id="@+id/btn_wDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/w_DB"
        app:layout_constraintStart_toStartOf="@+id/btn_WIS"
        app:layout_constraintTop_toBottomOf="@+id/btn_WIS" />

    <Button
        android:id="@+id/btn_RDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="@string/R_DB"
        app:layout_constraintStart_toEndOf="@+id/btn_wDB"
        app:layout_constraintTop_toTopOf="@+id/btn_wDB" />
</androidx.constraintlayout.widget.ConstraintLayout>